--- a/_config.yml
+++ b/_config.yml
@@ -52,7 +52,7 @@ about_content: | # this will include new lines to allow paragraphs
 
   &nbsp;개발자는 경험과 지식을 토대로 알맞는 기술을 채택하는 일을 한다고 생각합니다. 이것은 백엔드뿐만 아니라 프론트엔드, 인프라 등과 접목해서 생각해야 최대의 시너지를 낼 수 있기 때문에 결국엔 여러 분야를 두루두루 할줄 아는 것을 지향합니다.
   
-  &nbsp;경험을 쌓기 위해 사이드 프로젝트를 진행하며 부딪힌 일들을 블로그에 기록하고, 지식을 얻기 위해 인프런 강의와 책(ex.자바의 신)을 주기적으로 보고있습니다.  
+  &nbsp;경험을 쌓기 위해 사이드 프로젝트를 진행하며 부딪힌 일들을 블로그에 기록하고, 지식을 얻기 위해 인프런 강의와 책을 보고있습니다.  
 
 content:
   - title: Projects # Title for the section
