--- a/_config.yml
+++ b/_config.yml
@@ -9,6 +9,7 @@ version: 2
 name: 홍신기
 title: 자바 백엔드 개발자
 email: tlsrl6427@gmail.com
+phone: 01049305764 / 서울특별시 중구 다산로 36길 109 
 website: https://tlsrl6427.github.io
 
 # Dark Mode (true/false/never)
