--- a/_config.yml
+++ b/_config.yml
@@ -139,7 +139,7 @@ content:
         sub_title: 자연계(서울 소재)
 
       - layout: top-middle
-        caption: 97년 4월 14일생
+        sub_title: 1997년 4월 14일생
 
   - title: Skills
     layout: text
